--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+/* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -12,4 +13,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.avatar {
+  width: 200px;
+  height: 200px;
+}
+
+.list {
+  list-style: none;
 }
