--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,15 @@ code {
     monospace;
 }
 
+ul {
 
-.avatar {
-  width: 200px;
-  height: 200px;
+  list-style: none;
 }
 
-.list {
-  list-style: none;
+
+
+.container {
+  width: 600px;
+  margin-right: auto;
+  margin-left: auto;
 }
